<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExamProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="verify">Verify</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="display">Display</string>
    <string name="input_username">Input User Name</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>

</resources>
